made plotting not mandatory and added support to use a boolean in geometry_component files to determine if each surface should be treated as a killing surface.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-#ignore results folder and data_files folder as they are very large. They are located on the Pocar Lab One-Drive
+#ignore results folder
+results/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
